update to latest versions and add a maven wrapper

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,59 @@
     </modules>
 
     <properties>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.release>21</maven.compiler.release>
+        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+        <mavenversions.version>2.17.1</mavenversions.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>${maven-enforcer-plugin.version}</version>
+        <executions>
+            <execution>
+                <id>enforce-versions</id>
+                <goals>
+                    <goal>enforce</goal>
+                </goals>
+                <configuration>
+                    <rules>
+                        <requireMavenVersion>
+                            <version>3.6.3</version>
+                        </requireMavenVersion>
+                        <requireJavaVersion>
+                            <version>21</version>
+                        </requireJavaVersion>
+                        <DependencyConvergence />
+                    </rules>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
+
+            <!-- Plugin to check latest stable version of plugins and dependencies -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>${mavenversions.version}</version>
+                <configuration>
+                    <rulesUri>https://bruno.univ-tln.fr/rules.xml</rulesUri>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>display-dependency-updates</goal>
+                            <goal>display-plugin-updates</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
