--- a/simple-annotationprocessor-test/pom.xml
+++ b/simple-annotationprocessor-test/pom.xml
@@ -9,6 +9,11 @@
     </parent>
 
     <artifactId>simple-annotationprocessor-test</artifactId>
+    <properties>
+        <lombok.version>1.18.34</lombok.version>
+        <slf4j-api.version>2.0.16</slf4j-api.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -19,18 +24,18 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.5</version>
+            <version>${slf4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.5</version>
+            <version>${slf4j-api.version}</version>
         </dependency>
     </dependencies>
 
@@ -39,7 +44,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <!--configuration>
                     <annotationProcessorPaths>
                         <path>
